--- a/src/gui/form/mappingWindow.ui
+++ b/src/gui/form/mappingWindow.ui
@@ -7,26 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>722</width>
-    <height>540</height>
+    <height>501</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="mapping">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>420</y>
-      <width>112</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Mapping </string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="view_table_2">
     <property name="geometry">
      <rect>
@@ -76,20 +63,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Compare </string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="view_table_3">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>420</y>
-      <width>81</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>View</string>
+     <string>Mapping</string>
     </property>
    </widget>
    <widget class="QProgressBar" name="pbar_1">
@@ -189,30 +163,17 @@
      <string>Save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="save_3">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>420</y>
-      <width>81</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Save</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="update">
     <property name="geometry">
      <rect>
       <x>520</x>
-      <y>420</y>
+      <y>410</y>
       <width>91</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>Update</string>
+     <string>Upload</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -248,7 +209,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>420</y>
+      <y>410</y>
       <width>81</width>
       <height>32</height>
      </rect>
