--- a/src/gui/form/crawlingOliveInfoRevWindow.ui
+++ b/src/gui/form/crawlingOliveInfoRevWindow.ui
@@ -428,6 +428,19 @@
      <string>예상 소요 시간 :</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="Save_2">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>90</y>
+      <width>91</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
